<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failed_to_load_movies">Failed to load movies</string>
    <string name="try_again">Try again</string>
    <string name="popular_movies_title">Popular</string>
    <string name="search_movies_title">Search</string>
    <string name="search_hint">Search movies</string>
    <string name="section_more">more</string>
    <string name="movie_detail_overview_title">Overview</string>
    <string name="movie_detail_about_title">About</string>
    <string name="movie_detail_genres_title">Genres</string>
    <string name="movie_detail_cast_title">Cast</string>
    <string name="movie_detail_countries_title">Countries</string>
    <string name="start_fragment_title">MovieDatabase</string>
    <string name="popular_fragment_title">Popular</string>
    <string name="timePicker">Select time</string>
    <string name="datePicker">Select date</string>
    <string name="movie_detail_rating" translatable="false">%1$s votes</string>
    <string name="fragment_updated">Updating…</string>
    <string name="reminder_is_set">Reminder is set on %1$s</string>
    <string name="reminder_is_delete">%1$s. Reminder is delete</string>
    <string name="alarms_fragment_title">Alarms</string>
    <string name="main_fragment_title">Main</string>
    <string name="top_rated_fragment_title">Top rated</string>
    <string name="top_rated_movies_title">Top rated</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="trending_title">Trending</string>
    <string name="load_more_btn_title">Load more</string>
    <string name="alarm_dialog_title">Change date and time</string>
    <string name="save">Save</string>
    <string name="alarm_dialog_date_title">Date</string>
    <string name="alarm_dialog_time_title">Time</string>
    <string name="notification_text_remind">You wanted to see this movie</string>
    <string name="btn_remind_text">remind</string>
    <string name="movie_detail_trailer_title">Trailer</string>
</resources>