<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/picker_corner_radius"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_padding_large">

        <TextView
            android:id="@+id/alarm_dialog_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Venom 2"
            style="@style/style_movie_title"/>

        <TextView
            android:id="@+id/alarm_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_margin_large"
            app:layout_constraintTop_toBottomOf="@id/alarm_dialog_movie_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/alarm_dialog_title"
            style="@style/style_plain_text_tertiary"/>

        <LinearLayout
            android:id="@+id/alarm_dialog_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_padding_medium"
            app:layout_constraintTop_toBottomOf="@id/alarm_dialog_title"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/app_padding_medium"
                android:paddingBottom="@dimen/app_padding_medium">

                <TextView
                    android:id="@+id/alarm_dialog_time_title"
                    style="@style/style_movie_detail_subTitle_tertiary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/alarm_dialog_time_value"
                    android:padding="@dimen/app_padding_small"
                    android:text="@string/alarm_dialog_time_title" />

                <TextView
                    android:id="@+id/alarm_dialog_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/app_padding_small"
                    style="@style/style_movie_detail_subTitle"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/app_padding_medium"
                android:paddingBottom="@dimen/app_padding_medium">

                <TextView
                    android:id="@+id/alarm_dialog_date_title"
                    style="@style/style_movie_detail_subTitle_tertiary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/alarm_dialog_date_value"
                    android:padding="@dimen/app_padding_small"
                    android:text="@string/alarm_dialog_date_title" />

                <TextView
                    android:id="@+id/alarm_dialog_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/app_padding_small"
                    style="@style/style_movie_detail_subTitle"
                    />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/alarm_dialog_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/app_padding_medium"
            app:layout_constraintTop_toBottomOf="@id/alarm_dialog_container">

            <Button
                android:id="@+id/alarm_dialog_btn_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/save" />

            <Button
                android:id="@+id/alarm_dialog_btn_negative"
                android:text="@string/cancel"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>