<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_detail_fragment_background_container"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movie_detail_fragment_background_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/ic_launcher_background" />

            <View
                android:id="@+id/movie_detail_fragment_background_img_shade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="@id/movie_detail_fragment_background_img"
                android:background="@drawable/movie_detail_poster_shade"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_detail_fragment_title_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/app_padding_extraLarge"
                android:paddingEnd="@dimen/app_padding_extraLarge">

                <TextView
                    android:id="@+id/movie_detail_fragment_title"
                    style="@style/style_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/app_margin_small"
                    android:textColor="@color/on_primary"
                    app:layout_constraintBottom_toTopOf="@id/movie_detail_fragment_release_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    tools:text="Movie Title" />

                <TextView
                    android:id="@+id/movie_detail_fragment_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2020"
                    style="@style/style_plain_text"
                    android:textColor="@color/on_primary"
                    android:layout_marginBottom="@dimen/app_padding_large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_detail_fragment_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/app_padding_large"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_background_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_detail_fragment_about_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/app_padding_extraLarge"
                android:paddingEnd="@dimen/app_padding_extraLarge"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/movie_detail_fragment_about_title"
                    android:text="@string/movie_detail_about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/style_movie_detail_subTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/movie_detail_fragment_about_genres_title"
                    android:text="@string/movie_detail_genres_title"
                    style="@style/style_tag_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin_small"
                    app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_about_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/movie_detail_fragment_about_genres"
                    style="@style/style_plain_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/app_margin_small"
                    android:lines="1"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@id/movie_detail_fragment_about_genres_title"
                    app:layout_constraintTop_toTopOf="@id/movie_detail_fragment_about_genres_title"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/movie_detail_fragment_about_countries_title"
                    android:text="@string/movie_detail_countries_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin_extraSmall"
                    app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_about_genres"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/style_tag_text"/>

                <TextView
                    android:id="@+id/movie_detail_fragment_about_countries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/app_margin_small"
                    android:lines="1"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@id/movie_detail_fragment_about_countries_title"
                    app:layout_constraintTop_toTopOf="@id/movie_detail_fragment_about_countries_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/style_plain_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_detail_fragment_overview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_medium"
                android:paddingStart="@dimen/app_padding_extraLarge"
                android:paddingEnd="@dimen/app_padding_extraLarge"
                app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_about_container">

                <TextView
                    android:id="@+id/movie_detail_fragment_overview_title"
                    android:text="@string/movie_detail_overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/style_movie_detail_subTitle" />

                <TextView
                    android:id="@+id/movie_detail_fragment_overview_body"
                    tools:text="some desc"
                    android:justificationMode="inter_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin_small"
                    app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_overview_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    style="@style/style_plain_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_detail_fragment_cast_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin_medium"
                app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_overview_container">

                <TextView
                    android:id="@+id/movie_detail_fragment_cast_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/app_margin_extraLarge"
                    android:layout_marginEnd="@dimen/app_margin_extraLarge"
                    android:text="@string/movie_detail_cast_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/style_movie_detail_subTitle" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_detail_fragment_cast_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin_small"
                    app:layout_constraintTop_toBottomOf="@id/movie_detail_fragment_cast_title"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>